<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Grup 1: Ana Menü -->
    <group android:id="@+id/main_menu_group" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icons8_home_500"
            android:title="@string/anasayfa" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account_svgrepo_com"
            android:title="@string/profil" />

        <item
            android:id="@+id/zarat"
            android:icon="@drawable/dice_6_svgrepo_com"
            android:title="@string/zaratma" />
        <item
            android:id="@+id/ayarlar"
            android:icon="@drawable/settings_svgrepo_com"
            android:title="@string/ayarlar" />
    </group>

    <!-- Grup 2: Çıkış (Ayrı tutulur, üstüne sistem çizgisi gelir) -->
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/cıkıs" />
</menu>