<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/menu_previous_messages"
        android:title="@string/menu_previous_messages"
        android:icon="@drawable/ic_history"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/menu_new_message"
        android:title="@string/menu_new_message"
        android:icon="@drawable/ic_new_message"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/menu_clear_chat"
        android:title="@string/menu_clear_chat"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/menu_delete_all_messages"
        android:title="Tüm Mesajları Sil"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

    
</menu>