<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text3"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- 4. Lottie animasyon -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ppsextrabold"
        android:text="@string/app_name"
        android:textColor="@color/text2"
        android:textSize="20sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="sorumlu.json"
        app:lottie_loop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/ppsextrabold"
        android:text="@string/secimsorumluluklar"
        android:textAlignment="center"
        android:textColor="@color/text2"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/editSorumluluk"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:autofillHints=""
        android:background="@drawable/button1"
        android:backgroundTint="#5864D6"
        android:fontFamily="@font/ppsregular"
        android:hint="@string/edittextyazınız"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="27dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/ppsextrabold"
        android:text="@string/bunaneden"
        android:textAlignment="center"
        android:textColor="@color/text2"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:fontFamily="@font/ppsregular"
        android:text="@string/aciklama1"
        android:textAlignment="center"
        android:textColor="@color/text2"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ppsmediumitalic"
        android:text="@string/izin1"
        android:textAlignment="center" />

</LinearLayout>