<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ppsextrabold"
        android:text="@string/app_name"
        android:textColor="@color/text2"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/ppsextrabold"
        android:text="@string/secimlerkonum"
        android:textAlignment="center"
        android:textColor="@color/text2"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp" />

    <ImageButton
        android:id="@+id/btnIzinVer"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/button1"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="Icon button"
        android:elevation="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icons8_success_480" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/ppsextrabold"
        android:text="@string/bunaneden"
        android:textAlignment="center"
        android:textColor="@color/text2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ppsregular"
        android:text="@string/aciklama2"
        android:textAlignment="center"
        android:textColor="@color/text2"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ppsmediumitalic"
        android:text="@string/izin2"
        android:textAlignment="center" />

</LinearLayout>