<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text3"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ppsextrabold"
        android:text="@string/app_name"
        android:textColor="@color/text2"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/ppsextrabold"
        android:text="@string/yaskaç"
        android:textAlignment="center"
        android:textColor="@color/text2"
        android:textSize="20sp" />

    <NumberPicker
        android:id="@+id/sayiSecici"
        style="@android:style/Widget.Material.NumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:layout_gravity="center"
        android:background="@drawable/button1"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:gravity="center"
        android:scrollbarStyle="outsideInset"
        android:soundEffectsEnabled="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ppsextrabold"
        android:text="@string/bunaneden"
        android:textAlignment="center"
        android:textColor="@color/text2"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="19dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ppsregular"
        android:text="@string/aciklama1"
        android:textAlignment="center"
        android:textColor="@color/text2"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ppsmediumitalic"
        android:text="@string/izin1"
        android:textAlignment="center" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="sorumlu.json"
        app:lottie_loop="true" />

</LinearLayout>